--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.47.0",
